--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -6,7 +6,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionmailer
@@ -14,7 +14,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -22,7 +22,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actiontext
@@ -30,7 +30,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -38,7 +38,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -46,7 +46,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -54,7 +54,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -62,7 +62,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -70,7 +70,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -78,7 +78,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: addressable
@@ -86,7 +86,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: base64
@@ -98,19 +98,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
-- name: benchmark
-  version: '0'
-  source:
-    type: stdlib
 - name: bigdecimal
   version: '3.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: cgi
@@ -122,7 +118,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: connection_pool
@@ -130,7 +126,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: date
@@ -150,7 +146,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: erb
@@ -162,7 +158,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: faraday
@@ -170,9 +166,13 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: ffi
+  version: 1.17.2
+  source:
+    type: rubygems
 - name: fileutils
   version: '0'
   source:
@@ -186,7 +186,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: hashie
@@ -194,11 +194,11 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: herb
-  version: 0.7.5
+  version: 0.8.2
   source:
     type: rubygems
 - name: i18n
@@ -206,7 +206,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: io-console
@@ -222,7 +222,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: logger
@@ -234,7 +234,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: marcel
@@ -242,7 +242,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: mini_magick
+  version: '5.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: mini_mime
@@ -250,7 +258,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
@@ -258,7 +266,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: monitor
@@ -278,7 +286,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: nokogiri
@@ -286,11 +294,11 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: oauth2
-  version: 2.0.17
+  version: 2.0.18
   source:
     type: rubygems
 - name: openssl
@@ -314,7 +322,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -322,7 +330,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-html-sanitizer
@@ -330,7 +338,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -338,7 +346,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rake
@@ -346,7 +354,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rdoc
@@ -358,7 +366,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -366,7 +374,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: securerandom
@@ -386,7 +394,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: stringio
@@ -402,7 +410,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: time
@@ -410,6 +418,10 @@ gems:
   source:
     type: stdlib
 - name: timeout
+  version: '0'
+  source:
+    type: stdlib
+- name: tmpdir
   version: '0'
   source:
     type: stdlib
@@ -422,7 +434,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 10d80b1f45dd4241d64d40b49e622cd5d3cfa903
+    revision: f1d2dae32fe8d46683fbc79bbd0f1ca391d5e11a
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: uri
